syntax = "proto3";

package kedge.config.http.routes;

import "kedge/config/http/routes/matcher.proto";

/// Adhoc describes an adhoc proxying method that is not backed by a backend, but dials a "free form" DNS record.
message Adhoc {
    Matcher matcher = 1;

    /// Port controls the :port behaviour of the URI requested.
    Port port = 2;

    /// Port controls how the :port part of the URI is processed.
    message Port {
        /// default is the default port used if no entry is present.
        /// This defaults to 80.
        uint32 default = 1;

        /// allowed ports is a list of whitelisted ports that this Adhoc rule will allow.
        repeated uint32 allowed = 3;

        /// allowed_ranges is a list of whitelisted port ranges that this Adhoc rule will allow.
        repeated Range allowed_ranges = 4;
        message Range {
            /// from is an inclusive lower bound for the port range
            uint32 from = 1;
            /// to is an inclusive upper bound for the port range
            uint32 to = 2;
        }
    }

    // TODO(mwitkow): Add SRV resolution that overrides default.
}